k8s_files/kcsvc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app-kc
  name: app-kc
  namespace: dev-kc
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: app-kc
status:
  loadBalancer: {}
