k8s_files/kcingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kc-ingress
  namespace: dev-kc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-kc
            port:
              number: 4000
